--- a/lab3/templates/index.html
+++ b/lab3/templates/index.html
@@ -21,7 +21,7 @@
 
 <button id = 'logoutbtn'>logout</button>
 </body>
-
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 <script>
 
 
