--- a/lab3/templates/login.html
+++ b/lab3/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>login</title>
-<
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"></link>
 </head>
 <body>
 
