--- a/lab2/static/style.css
+++ b/lab2/static/style.css
@@ -2,3 +2,27 @@ body {
   font-family: "helvetica", sans-serif;
   text-align: center;
 }
+
+#google {
+  background-image: url(images/btn_google_signin_light_normal_web.png);
+  display: block;
+  margin: 0 auto;
+  width: 191px;
+  height: 46px;
+}
+
+#google:hover {
+  background-image: url(images/btn_google_signin_light_focus_web.png);
+  display: block;
+  margin: 0 auto;
+  width: 191px;
+  height: 46px;
+}
+
+#google:active {
+  background-image: url(images/btn_google_signin_light_pressed_web.png);
+  display: block;
+  margin: 0 auto;
+  width: 191px;
+  height: 46px;
+}
