--- a/lab2/templates/index.html
+++ b/lab2/templates/index.html
@@ -21,9 +21,8 @@
 
 <button id = 'logoutbtn'>logout</button>
 </body>
-
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 <script>
-
 
 function reqJSON(method, url, data) {
   return new Promise((resolve, reject) => {
@@ -47,6 +46,7 @@ function reqJSON(method, url, data) {
 	//xhr.send(data);
   });
 }
+
 async function getEvent(){
    let {data} = await reqJSON('GET','/events');
    const event_div = document.getElementById('events');
